# ghostops

./: .env.example  .gitignore  DEVPOST.md  Dockerfile  LICENSE  README.md  SETUP_INSTRUCTIONS.md  app.py  gemini_live.txt  pyproject.toml  requirements.txt
.do/: app.yaml
agents/: __init__.py  adk_orchestrator.py
agents/browser/: agent.py
agents/cua_cli/: __init__.py  agent.py
agents/cua_cli/gemini-cli/: package.json
agents/cua_vision/: agent.py  agentic_vision.py  keyboard.py  legacy_locator.py  single_call.py  tools.py
agents/screen/: __init__.py  agent.py  prompts.py  tools.py
agents/workflow/: engine.py
backend/: main.py  memory.py  requirements.txt  vision.py
core/: __init__.py  do_platform.py  do_provider.py  gemini_provider.py  groq_provider.py  provider.py  settings.py
deploy/: deploy.sh
desktop/: audio_test.py  main.py  memory_client.py  ptt.py  screen.py
integrations/: __init__.py
integrations/audio/: tts.py
models/: __init__.py  adk_agents.py  function_calls.py  models.py  prompts.py
tests/: test_core.py
ui/: index.html  main.js  package-lock.json  package.json  preload.js  renderer.js  server.py
ui/animations/: command_overlay.css  command_overlay.js  overlay_text.css  status_bubble.css
ui/dom_nodes/: overlay_text.js
voice/: live_api.py
